More changes
Signed-off-by: Peter Zhu <zhujiaxi@amazon.com>